--- a/examples/Code-Documentation-QA-Bot/package.json
+++ b/examples/Code-Documentation-QA-Bot/package.json
@@ -1,15 +1,21 @@
 {
-  "name": "vectordb-example-qa-bot",
-  "version": "1.0.0",
+  "name": "examples",
+  "version": "0.0.0",
+  "main": "/index.js",
+  "type": "module",
+  "files": [
+    "dist/"
+  ],
   "description": "LanceDB's example for a code documentation QA bot",
-  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "dev@lance",
   "license": "Apache-2.0",
   "dependencies": {
-    "vectordb": "^0.1.8",
-    "openai": "^3.3.0"
+    "@guoyunhe/downloader": "^1.3.0",
+    "langchain": "^0.0.102",
+    "openai": "^3.3.0",
+    "vectordb": "^0.1.8"
   }
 }
