--- a/.github/workflows/docs-test.yml
+++ b/.github/workflows/docs-test.yml
@@ -37,6 +37,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python compile_testing.py
+          bash convert-ipynb.sh
       - name: Install dependencies
         run: |
           sudo apt-get install unzip
