--- a/.github/workflows/docs-test.yml
+++ b/.github/workflows/docs-test.yml
@@ -37,11 +37,13 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           python compile_testing.py
-          bash convert-ipynb.sh
       - name: Install dependencies
         run: |
           sudo apt-get install unzip
+          cd testing-folder
           pip install -r joined-requirements.txt
+          cd ..
+          bash convert-ipynb.sh
       - name: Download datasets
         run: |
           cd testing-folder
