--- a/.github/workflows/docs-test.yml
+++ b/.github/workflows/docs-test.yml
@@ -22,6 +22,7 @@ on:
 jobs:
   test-python:
     name: Test python examples
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -62,6 +63,7 @@ jobs:
           done
   test-node:
     name: Test node examples
+    timeout-minutes: 30
     runs-on: ubuntu-latest
     strategy:
       matrix:
