--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -33,7 +33,6 @@ jobs:
         with:
           python-version: 3.${{ matrix.python-version }}
           cache: "pip"
-          cache-dependency-path: "requirements.txt"
       - name: Create files
         run: |
           python -m pip install --upgrade pip
@@ -52,12 +51,12 @@ jobs:
       - name: Run tests
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        working-directory: testing-folder
         run: |
-          cd testing-folder
           for d in *; do
             if [[ $d == *.py ]]; then
               echo "$d";
-              python "./$d";
+              python "$d";
             fi
           cd ..;
           done
@@ -86,7 +85,9 @@ jobs:
         node compile_testing.js
         cd testing-folder
         bash merge-package.sh
-        iconv -f UTF-16LE -t UTF-8 package.json.temp > package.json
+        cat package.json.temp
+        iconv -f UTF-16 -t UTF-8 package.json.temp > package.json
+        cat package.json
         npm install
     - uses: swatinem/rust-cache@v2
     - name: Install LanceDB
