--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -54,7 +54,6 @@ jobs:
         working-directory: testing-folder
         run: |
           pwd
-          cd testing-folder
           for d in *; do
             if [[ $d == *.py ]]; then
               echo "$d";
@@ -82,12 +81,11 @@ jobs:
         sudo apt update
         sudo apt install -y protobuf-compiler libssl-dev
         npm install -g package-json-merge
-    - name: Create files
-      run: |
         node compile_testing.js
-        cd testing-folder
+    - name: Create files
+      working-directory: testing-folder
+      run: |
         bash merge-package.sh
-        cat package.json.temp
         iconv -f UTF-8 -t UTF-8 package.json.temp > package.json
         cat package.json
         npm install
