--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -54,9 +54,11 @@ jobs:
         working-directory: testing-folder
         run: |
           pwd
+          ls
           for d in *; do
+            pwd
+            ls
             if [[ $d == *.py ]]; then
-              echo "$d";
               pwd
               ls
               python "$d";
