--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -53,9 +53,8 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         working-directory: testing-folder
         run: |
-          for d in *; do
+          for d in ./*; do
             if [[ $d == *.py ]]; then
-              cd testing-folder
               echo "$d";
               python "$d";
             fi
@@ -88,7 +87,6 @@ jobs:
         bash merge-package.sh
         iconv -f UTF-8 -t UTF-8 package.json.temp > package.json
         cat package.json
-        cd testing-folder
         npm install
     - uses: swatinem/rust-cache@v2
     - name: Install LanceDB
