--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -53,12 +53,11 @@ jobs:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         working-directory: testing-folder
         run: |
-          for d in ./*; do
+          for d in /*; do
             if [[ $d == *.py ]]; then
               echo "$d";
               python "$d";
             fi
-          cd ..;
           done
   test-node:
     name: Test node examples
@@ -109,5 +108,4 @@ jobs:
             echo "$d";
             python "$d";
           fi
-        cd ..;
         done
