--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -20,45 +20,45 @@ on:
 
 
 jobs:
-  test-python:
-    name: Test python examples
-    timeout-minutes: 30
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [ "11" ]
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
-        with:
-          python-version: 3.${{ matrix.python-version }}
-          cache: "pip"
-      - name: Create files
-        run: |
-          python -m pip install --upgrade pip
-          python compile_testing.py
-      - name: Install dependencies
-        run: |
-          sudo apt-get install unzip
-          cd testing-folder
-          pip install -r joined-requirements.txt
-          cd ..
-          bash convert-ipynb.sh
-      - name: Download datasets
-        run: |
-          cd testing-folder
-          bash commands.sh
-      - name: Run tests
-        env:
-          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        working-directory: testing-folder
-        run: |
-          for d in *; do
-            if [[ $d == *.py ]]; then
-              echo "$d";
-              python "$d";
-            fi
-          done
+  # test-python:
+  #   name: Test python examples
+  #   timeout-minutes: 30
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     matrix:
+  #       python-version: [ "11" ]
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-python@v4
+  #       with:
+  #         python-version: 3.${{ matrix.python-version }}
+  #         cache: "pip"
+  #     - name: Create files
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         python compile_testing.py
+  #     - name: Install dependencies
+  #       run: |
+  #         sudo apt-get install unzip
+  #         cd testing-folder
+  #         pip install -r joined-requirements.txt
+  #         cd ..
+  #         bash convert-ipynb.sh
+  #     - name: Download datasets
+  #       run: |
+  #         cd testing-folder
+  #         bash commands.sh
+  #     - name: Run tests
+  #       env:
+  #         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+  #       working-directory: testing-folder
+  #       run: |
+  #         for d in *; do
+  #           if [[ $d == *.py ]]; then
+  #             echo "$d";
+  #             python "$d";
+  #           fi
+  #         done
   test-node:
     name: Test node examples
     timeout-minutes: 30
@@ -86,6 +86,8 @@ jobs:
         bash merge-package.sh
         iconv -f UTF-8 -t UTF-8 package.json.temp > package.json
         cat package.json
+        pwd
+        ls
         npm install
     - uses: swatinem/rust-cache@v2
     - name: Install LanceDB
