--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -90,7 +90,7 @@ jobs:
       working-directory: testing-folder
       run: |
         ls
-        npm init
+        npm init -y
         pwd
         ls
         npm install
