--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -20,45 +20,45 @@ on:
 
 
 jobs:
-  # test-python:
-  #   name: Test python examples
-  #   timeout-minutes: 30
-  #   runs-on: ubuntu-latest
-  #   strategy:
-  #     matrix:
-  #       python-version: [ "11" ]
-  #   steps:
-  #     - uses: actions/checkout@v3
-  #     - uses: actions/setup-python@v4
-  #       with:
-  #         python-version: 3.${{ matrix.python-version }}
-  #         cache: "pip"
-  #     - name: Create files
-  #       run: |
-  #         python -m pip install --upgrade pip
-  #         python compile_testing.py
-  #     - name: Install dependencies
-  #       run: |
-  #         sudo apt-get install unzip
-  #         cd testing-folder
-  #         pip install -r joined-requirements.txt
-  #         cd ..
-  #         bash convert-ipynb.sh
-  #     - name: Download datasets
-  #       run: |
-  #         cd testing-folder
-  #         bash commands.sh
-  #     - name: Run tests
-  #       env:
-  #         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-  #       working-directory: testing-folder
-  #       run: |
-  #         for d in *; do
-  #           if [[ $d == *.py ]]; then
-  #             echo "$d";
-  #             python "$d";
-  #           fi
-  #         done
+  test-python:
+    name: Test python examples
+    timeout-minutes: 30
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [ "11" ]
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v4
+        with:
+          python-version: 3.${{ matrix.python-version }}
+          cache: "pip"
+      - name: Create files
+        run: |
+          python -m pip install --upgrade pip
+          python compile_testing.py
+      - name: Install dependencies
+        run: |
+          sudo apt-get install unzip
+          cd testing-folder
+          pip install -r joined-requirements.txt
+          cd ..
+          bash convert-ipynb.sh
+      - name: Download datasets
+        run: |
+          cd testing-folder
+          bash commands.sh
+      - name: Run tests
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
+        working-directory: testing-folder
+        run: |
+          for d in *; do
+            if [[ $d == *.py ]]; then
+              echo "$d";
+              python "$d";
+            fi
+          done
   test-node:
     name: Test node examples
     timeout-minutes: 30
@@ -80,8 +80,6 @@ jobs:
         sudo apt install -y protobuf-compiler libssl-dev
         npm install -g package-json-merge
         node compile_testing.js
-    - name: Debug
-      uses: mxschmitt/action-tmate@v3
     - name: Create files
       working-directory: testing-folder
       run: |
@@ -108,6 +106,6 @@ jobs:
         for d in *; do
           if [[ $d == *.js ]]; then
             echo "$d";
-            python "$d";
+            node "$d";
           fi
         done
