--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -75,6 +75,7 @@ jobs:
     - uses: actions/checkout@v3
       with:
         repository: lancedb/lancedb
+        path: './lancedb'
     - uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
