--- a/package.json
+++ b/package.json
@@ -10,6 +10,6 @@
     "license": "Apache-2.0",
     "dependencies": {
         "openai": "^3.3.0",
-        "vectordb": "file:lancedb/node/vectordb-0.1.19.tgz"
+        "vectordb": "^0.1.19"
     }
 }
