--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -26,6 +26,7 @@ jobs:
     timeout-minutes: 30
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         python-version: [ "11" ]
     steps:
