--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -34,31 +34,34 @@ jobs:
         with:
           python-version: 3.${{ matrix.python-version }}
           cache: "pip"
-      - name: Create files
-        run: |
-          python -m pip install --upgrade pip
-          python compile_testing.py
       - name: Install dependencies
         run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
           sudo apt-get install unzip
-          cd testing-folder
-          pip install -r joined-requirements.txt
-          cd ..
-          : # bash convert-ipynb.sh
-      - name: Download datasets
-        run: |
-          cd testing-folder
-          bash commands.sh
       - name: Run tests
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        working-directory: testing-folder
+        working-directory: examples
         run: |
-          for d in *; do
-            if [[ $d == *.py ]]; then
-              echo "$d";
-              pytest "$d" -s;
+          for folder in *; do
+            if [ ! -f "$folder"/test.py ]; then
+              continue
             fi
+            for file in "$folder"/*; do
+              if [[ $file == requirements.txt ]]; then
+                echo "$file";
+                python -m pip install -r "$file";
+                pip uninstall lancedb -y
+                pip install lancedb @ git+https://github.com/lancedb/lancedb.git#egg=subdir&subdirectory=python
+              fi
+            done
+            for file in "$folder"/*; do
+              if [[ $file == test.py ]]; then
+                echo "$file";
+                python "$file";
+              fi
+            done
           done
   test-node:
     name: Test node examples
