--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -49,7 +49,8 @@ jobs:
             if [ ! -f "$folder"/test.py ]; then
               continue
             fi
-            for file in "$folder"/*; do
+            cd "$folder"
+            for file in *; do
               echo "$file";
               if [[ $file == requirements.txt ]]; then
                 echo "$file";
@@ -58,12 +59,13 @@ jobs:
                 pip install lancedb @ git+https://github.com/lancedb/lancedb.git#egg=subdir&subdirectory=python
               fi
             done
-            for file in "$folder"/*; do
+            for file in *; do
               if [[ $file == test.py ]]; then
                 echo "$file";
                 python "$file";
               fi
             done
+            cd ..
           done
   test-node:
     name: Test node examples
