--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -56,7 +56,7 @@ jobs:
                 echo "$file";
                 python -m pip install -r "$file";
                 pip uninstall lancedb -y
-                pip install lancedb @ git+https://github.com/lancedb/lancedb.git#egg=subdir&subdirectory=python
+                pip install "lancedb @ git+https://github.com/lancedb/lancedb.git#egg=subdir&subdirectory=python"
               fi
             done
             for file in *; do
