--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -62,7 +62,7 @@ jobs:
             for file in *; do
               if [[ $file == test.py ]]; then
                 echo "$file";
-                python "$file";
+                pytest "$file";
               fi
             done
             cd ..
