--- a/applications/HR_chatbot/requirements.txt
+++ b/applications/HR_chatbot/requirements.txt
@@ -1,100 +1,6 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-altair==5.0.1
-asttokens==2.2.1
-async-timeout==4.0.2
-attrs==23.1.0
-backcall==0.2.0
-blinker==1.6.2
-cachetools==5.3.1
-certifi==2023.5.7
-cffi==1.15.1
-charset-normalizer==3.1.0
-click==8.1.3
-comm==0.1.3
-cryptography==41.0.1
-dataclasses-json==0.5.9
-debugpy==1.6.7
-decorator==5.1.1
-dnspython==2.3.0
-executing==1.2.0
-frozenlist==1.3.3
-gitdb==4.0.10
-GitPython==3.1.31
-greenlet==2.0.2
-idna==3.4
-importlib-metadata==6.7.0
-ipykernel==6.23.3
-ipython==8.14.0
-isodate==0.6.1
-jedi==0.18.2
-Jinja2==3.1.2
-jsonschema==4.17.3
-jupyter_client==8.3.0
-jupyter_core==5.3.1
-langchain==0.0.325
-langchainplus-sdk==0.0.19
-loguru==0.7.0
-markdown-it-py==3.0.0
-MarkupSafe==2.1.3
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib-inline==0.1.6
-mdurl==0.1.2
-multidict==6.0.4
-mypy-extensions==1.0.0
-nest-asyncio==1.5.6
-numexpr==2.8.4
-numpy==1.25.0
-openai==0.27.8
-openapi-schema-pydantic==1.2.4
-packaging==23.1
-pandas==2.0.3
-parso==0.8.3
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==9.5.0
-platformdirs==3.8.0
-prompt-toolkit==3.0.38
-protobuf==4.23.3
-psutil==5.9.5
-ptyprocess==0.7.0
-pure-eval==0.2.2
-pyarrow==12.0.1
-pycparser==2.21
-pydantic==1.10.10
-pydeck==0.8.1b0
-Pygments==2.15.1
-Pympler==1.0.1
-pyrsistent==0.19.3
-python-dateutil==2.8.2
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-pyzmq==25.1.0
-requests==2.31.0
-rich==13.4.2
-six==1.16.0
-smmap==5.0.0
-SQLAlchemy==2.0.17
-stack-data==0.6.2
-streamlit==1.24.0
-streamlit-chat==0.1.1
-tenacity==8.2.2
-toml==0.10.2
-toolz==0.12.0
-tiktoken==0.4.0
-tornado==6.3.2
-tqdm==4.65.0
-traitlets==5.9.0
-typing-inspect==0.9.0
-typing_extensions==4.7.0
-tzdata==2023.3
-tzlocal==4.3.1
-urllib3==2.0.3
-validators==0.20.0
-watchdog==3.0.0
-wcwidth==0.2.6
-yarl==1.9.2
-zipp==3.15.0
+streamlite
 lancedb
+langchain
+openai
+streamlit-chat
+tiktoken
