added support for Langroid

--- a/applications/talk-with-podcast/requirements.txt
+++ b/applications/talk-with-podcast/requirements.txt
@@ -1,12 +1,14 @@
-# for podcast download
+# for podcast download - yt-dlp
 https://github.com/yt-dlp/yt-dlp/archive/master.tar.gz
 
 opencv-python
 openai==0.28.1
 langchain 
+langroid
 lancedb 
 tiktoken
 streamlit
+st-annotated-text
 
 # speed2text
 insanely-fast-whisper --force --ignore-requires-python
