--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -10,5 +10,5 @@ jobs:
       - uses: psf/black@stable
         with:
           options: "--check --verbose"
-          src: "./vectordb-recipes"
+          src: "../../vectordb-recipes"
           jupyter: true
