--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -46,7 +46,7 @@ jobs:
         run: |
           for folder in *; do
             echo "$folder";
-            if [[ $folder == multimodal_clip ]]; then
+            if [[ $folder == multimodal_clip_diffusiondb ]]; then
               continue
             fi
             if [ ! -f "$folder"/test.py ]; then
@@ -59,7 +59,7 @@ jobs:
                 echo "$file";
                 python -m pip install -r "$file";
                 pip uninstall lancedb -y
-                pip install "lancedb @ git+https://github.com/lancedb/lancedb.git#egg=subdir&subdirectory=python"
+                pip install lancedb
               fi
             done
             for file in *; do
