node test ci fix (#163)
* assests and app name

* update README

* demo gifs

* talk with github codespaces

* talk with github codespaces

* gitignore

* linted

* added version

* link fix

* added local llm tag

* crag

* link fix

* lint

* llm tags

* non-clickable badge

* non-clickable badge

* fix

* tutorial llm tags

* added instructions and fix

* colab fix

* fix

* formatted

* hybrid search and rag colab

* colab format

* python test

* node test

* python test

* blog link update

* rag mlx

* myntra search engine app

* link fix

* CrewAI Example

* lint

* node test

* node test

* node test

--- a/.github/workflows/examples-test.yml
+++ b/.github/workflows/examples-test.yml
@@ -129,6 +129,7 @@ jobs:
       env:
         OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
       run: |
+        npm install @lancedb/vectordb-linux-x64-gnu
         for d in *; do
           if [[ $d == *.js ]]; then
             echo "$d";
