--- a/examples/databricks_DBRX_website_bot/requirements.txt
+++ b/examples/databricks_DBRX_website_bot/requirements.txt
@@ -1,3 +1,5 @@
 llama-index
 llama-index-llms-databricks
 llama-index-embeddings-huggingface
+llama-index-readers-web
+llama-index-vector-stores-lancedb
