black test update

--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: psf/black@main
+      - uses: psf/black@stable
         with:
           options: "--check --verbose"
           src: "../../vectordb-recipes"
