--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -5,12 +5,9 @@ jobs:
     name: runner / black formatter
     runs-on: ubuntu-latest
     steps:
-      - name: Install black 
-          run: |
-            pip install "black[jupyter]"
-    
+      - name: Install Black
+        run: pip install "black[jupyter]"
       - uses: actions/checkout@v4
       - uses: rickstaa/action-black@v1
         with:
           black_args: ". --check --verbose"
-          jupyter: true
