lint test update (#211)
* assests and app name

* update README

* demo gifs

* talk with github codespaces

* talk with github codespaces

* gitignore

* linted

* added version

* link fix

* added local llm tag

* crag

* link fix

* lint

* llm tags

* non-clickable badge

* non-clickable badge

* fix

* tutorial llm tags

* added instructions and fix

* colab fix

* fix

* formatted

* hybrid search and rag colab

* colab format

* python test

* node test

* python test

* blog link update

* rag mlx

* myntra search engine app

* link fix

* CrewAI Example

* lint

* node test

* node test

* node test

* added readme

* support for Gemini Pro

* fix

* chunking techniques

* lint

* Locally RAG from Scratch

* lint

* llama3 added

* link finx

* sdk manual cli chatbot phidata

* sdk manual cli chatbot phidata

* link fix

* tags

* advanced

* update readme

* remove key

* lint

* formatting fixes

* lint

* updated image

* added demo image

* change autogen notebook

* lint

* lint

* rag evaluation with ragas

* README update

* broken link fix

* Restructured README

* updated titles

* restructed README

* sectional description

* lint

* dataset with Instructor

* lint

* remove blog link

* img update

* broken link

* structured dataset using Instructor

* lint

* lint test update

* lint workflow test

* linting

* linting workflow

* linting workflow test

* linting workflow test

* linting workflow test

* linting workflow test

* linting workflow test

--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -1,14 +1,13 @@
-name: Lint
-
+name: black-action
 on: [push, pull_request]
-
 jobs:
-  lint:
+  linter_name:
+    name: runner / black formatter
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - uses: psf/black
+      - name: Install Black
+        run: pip install "black[jupyter]"
+      - uses: actions/checkout@v4
+      - uses: rickstaa/action-black@v1
         with:
-          options: "--check --verbose"
-          src: "../../vectordb-recipes"
-          jupyter: true
+          black_args: ". --check --verbose"
