--- a/applications/node/lanchain_writing_assistant/package.json
+++ b/applications/node/lanchain_writing_assistant/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@lancedb/lancedb": "^0.12.0",
     "@langchain/community": "^0.3.1",
     "@langchain/openai": "^0.3.0",
     "@testing-library/jest-dom": "^5.17.0",
