--- a/applications/node/mutimodal_meme_finder/package.json
+++ b/applications/node/mutimodal_meme_finder/package.json
@@ -29,9 +29,11 @@
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fs": "^0.0.1-security",
+    "install": "^0.13.0",
     "langchain": "^0.3.7",
     "multer": "^1.4.5-lts.1",
     "multi-range-slider-react": "^2.0.7",
+    "npm": "^11.2.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -39,6 +41,7 @@
     "react-quill": "^2.0.0",
     "react-range-slider-input": "^3.0.7",
     "react-scripts": "5.0.1",
+    "sharp": "^0.33.5",
     "vectordb": "^0.1.19",
     "web-vitals": "^2.1.4"
   },
@@ -53,9 +56,9 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
-    "vite": "^6.0.5",
-    "npm-run-all": "^4.1.5"
+    "vite": "^6.0.5"
   }
 }
