--- a/applications/Chatbot_with_Parler_TTS/requirements.txt
+++ b/applications/Chatbot_with_Parler_TTS/requirements.txt
@@ -1,10 +1,10 @@
-langchain 
-langchain-community 
-langchain-openai 
-lancedb 
-bs4 
+langchain==0.1.0
+langchain-community==0.0.20
+langchain-openai==0.1.7
+lancedb==0.16.0
+bs4==0.0.2
 tantivy==0.20.1 
-pypdf 
-gradio
-torch
+pypdf==5.4.0
+gradio==5.29.0
+torch==2.7.0
 git+https://github.com/huggingface/parler-tts.git
